--- a/index.html
+++ b/index.html
@@ -15,11 +15,16 @@
             text-align: center;
             text-shadow: 2px 2px 5px black;
         }
+
+        h2 {
+            text-shadow: 2px 2px 5px rgb(0, 132, 255);
+        }
         
         p {
             color: black;
             font-family: Verdana;
             font-size: 20px;
+            text-shadow: 2px 2px 5px rgb(0, 132, 255);
         }
 
         .img-container {
@@ -72,9 +77,9 @@
 </div>
 
 <h1> CSD112 - Introduction to Web Development</h1>
-<p>Hello, my name is <em>Ryan Yost</em> I am writing this <b>paragraph</b> to display that I can used inline styles to display both <em>Italic</em> and <b>Bold</b> text</p>
+<p style="font-weight: bold;font-style: italic;">Hello, my name is Ryan Yost I am writing this paragraph to demonstrate that I can used inline styles to display both Italic and Bold text.</p>
 
-<p class="new">This paragraph has been preset to include both bold and italic text using embedded style sheets to demonstrate my ability to do so</p>
+<p class="new">This paragraph has been preset to include both bold and italic text using embedded style sheets to demonstrate my ability to do so.</p>
 
 <p class="newer">This final paragraph has been preset to include both bold and italic text using External Stylesheets to demonstrate my ability to do so.</p>
 
@@ -90,7 +95,7 @@
 </figure>
 
 <h2>Telephone Directory:</h2>
-<table style="width:50%">
+<table style="width:50%;">
     <tr>
       <th>Name</th>
       <th>Phone Number</th>
